--- a/src/app/components/ChatInterface/ChatInterface.module.scss
+++ b/src/app/components/ChatInterface/ChatInterface.module.scss
@@ -172,6 +172,7 @@
   border-radius: 24px;
   border: 1px solid var(--color-border);
   background-color: var(--color-surface);
+  color: var(--color-text-primary);
   font-size: $font-size-base;
   line-height: $line-height-normal;
   resize: none;
