--- a/src/app/components/MarkdownContent/MarkdownContent.module.scss
+++ b/src/app/components/MarkdownContent/MarkdownContent.module.scss
@@ -3,7 +3,7 @@
 .markdown {
   font-size: $font-size-sm;
   line-height: $line-height-relaxed;
-  color: inherit;
+  color: var(--color-text-primary);
   word-break: break-word;
 
   h1,
@@ -15,6 +15,7 @@
     margin-top: $spacing-lg;
     margin-bottom: $spacing-md;
     font-weight: $font-weight-semibold;
+    color: var(--color-text-primary);
 
     &:first-child {
       margin-top: 0;
@@ -23,6 +24,7 @@
 
   p {
     margin-bottom: $spacing-md;
+    color: var(--color-text-primary);
 
     &:last-child {
       margin-bottom: 0;
@@ -44,6 +46,7 @@
     border-radius: $radius-sm;
     font-family: $font-family-mono;
     font-size: 0.9em;
+    color: var(--color-text-primary);
   }
 
   .preWrapper {
@@ -89,9 +92,11 @@
   .orderedList {
     margin: $spacing-md 0;
     padding-left: $spacing-lg;
+    color: var(--color-text-primary);
 
     li {
       margin-bottom: $spacing-xs;
+      color: var(--color-text-primary);
 
       &:last-child {
         margin-bottom: 0;
@@ -107,6 +112,7 @@
   .table {
     width: 100%;
     border-collapse: collapse;
+    color: var(--color-text-primary);
 
     th {
       background-color: var(--color-surface);
@@ -114,11 +120,13 @@
       text-align: left;
       padding: $spacing-sm;
       border: 1px solid var(--color-border);
+      color: var(--color-text-primary);
     }
 
     td {
       padding: $spacing-sm;
       border: 1px solid var(--color-border);
+      color: var(--color-text-primary);
     }
   }
 
