--- a/src/app/components/ParsingInterface/ParsingInterface.module.scss
+++ b/src/app/components/ParsingInterface/ParsingInterface.module.scss
@@ -6,6 +6,9 @@
   max-height: 85vh;
   overflow-y: auto;
   padding: 24px;
+  background: #1a1a1a !important;
+  color: white !important;
+  opacity: 1 !important;
 }
 
 .tabs {
